# mcpme

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: challenges.yml  ci.yml  docs-pages.yml
case_studies/: README.md  pycycle_mpcycle.py  su2_cli.py  tigl_cpacs.py
case_studies/pycycle_mpcycle/: ingest.py  serve.py  use.py
case_studies/su2_cli/: ingest.py  serve.py  use.py
case_studies/tigl_cpacs/: ingest.py  serve.py  use.py
challenges/: README.md
challenges/cases/aerosandbox_easy/: README.md  challenge.toml
challenges/cases/aerosandbox_hard/: README.md  challenge.toml
challenges/cases/aerosandbox_insane/: README.md  challenge.toml
challenges/cases/aerosandbox_root/: README.md  challenge.toml
challenges/cases/avl_easy/: README.md  challenge.toml
challenges/cases/avl_hard/: README.md  challenge.toml
challenges/cases/avl_insane/: README.md  challenge.toml
challenges/cases/avl_medium/: README.md  challenge.toml
challenges/cases/build123d_easy/: README.md  challenge.toml
challenges/cases/build123d_hard/: README.md  challenge.toml
challenges/cases/build123d_importers/: README.md  challenge.toml
challenges/cases/build123d_root/: README.md  challenge.toml
challenges/cases/gmsh_cli/: README.md  challenge.toml
challenges/cases/gmsh_easy/: README.md  challenge.toml
challenges/cases/gmsh_insane/: README.md  challenge.toml
challenges/cases/gmsh_module_root/: README.md  challenge.toml
challenges/cases/openmdao_api_problem/: README.md  challenge.toml
challenges/cases/openmdao_easy/: README.md  challenge.toml
challenges/cases/openmdao_file_utils/: README.md  challenge.toml
challenges/cases/openmdao_hard/: README.md  challenge.toml
challenges/cases/openmdao_insane/: README.md  challenge.toml
challenges/cases/pynastran_bdf/: README.md  challenge.toml
challenges/cases/pynastran_easy/: README.md  challenge.toml
challenges/cases/pynastran_hard/: README.md  challenge.toml
challenges/cases/pynastran_insane/: README.md  challenge.toml
challenges/cases/su2_cli/: README.md  challenge.toml
challenges/cases/su2_easy/: README.md  (+1 more)
challenges/catalog/: aerosandbox_root.toml  build123d_importers.toml  build123d_root.toml  gmsh_cli.toml  gmsh_module_root.toml  openmdao_api_problem.toml  openmdao_file_utils.toml  pynastran_bdf.toml  su2_cli.toml  submitit_root.toml  xfoil_cli.toml
docs/: api.rst  conf.py  dependencies_and_extras.rst  development_notes.rst  index.rst  quickstart.rst  specification.rst
docs/_static/: custom.css
docs/case_studies/: index.rst  pycycle_mpcycle.rst  su2_cli.rst  tigl_cpacs.rst
docs/examples/: argparse_cli_wrapper.rst  basic_usage.rst  command_scaffold.rst  index.rst  openapi_scaffold.rst  package_scaffold.rst  runtime_server.rst  subprocess_wrapper.rst
examples/: README.md  argparse_cli_wrapper.py  basic_usage.py  command_scaffold.py  openapi_scaffold.py  package_scaffold.py  runtime_server.py  subprocess_wrapper.py
examples/core/: argparse_cli_wrapper.py  basic_usage.py  command_scaffold.py  openapi_scaffold.py  package_scaffold.py  runtime_server.py  subprocess_wrapper.py
examples/real_world/: README.md
examples/support/: __init__.py
scripts/: check_coverage_thresholds.py  check_docs_consistency.py  check_docstrings.py  check_google_docstrings.py  generate_case_study_docs.py  generate_challenge_docs.py  generate_challenges_badge.py  generate_example_docs.py  install_challenge_deps.py  run_challenges.py
src/mcpcraft/: _challenges.py  _jobs.py  _openapi.py  _python_tools.py  _scaffold.py  cli.py  config.py  discovery.py  execution.py  manifest.py  runtime.py  schema.py
src/mcpme/: _challenges.py  _jobs.py  _openapi.py  _python_tools.py  _scaffold.py  cli.py  config.py  discovery.py  docstrings.py  execution.py  manifest.py  runtime.py  schema.py
src/mcpwrap/: __init__.py  _challenges.py  _jobs.py  _openapi.py  _python_tools.py  _scaffold.py  cli.py  config.py  execution.py  manifest.py  runtime.py  schema.py
src/python_template/: __init__.py  core.py
tests/: test_argparse_cli.py  test_case_studies_boundary.py  test_case_studies_smoke.py  test_case_study_docs.py  test_challenge_docs.py  test_challenge_install.py  test_challenges_catalog.py  test_challenges_internals.py  test_challenges_runner.py  test_config.py  test_core.py  test_discovery_edges.py  test_docstrings.py  test_examples_public_api_coverage.py  test_examples_public_boundary.py  test_examples_smoke.py  test_execution.py  test_execution_edges.py  test_execution_internals.py  test_jobs.py  test_manifest.py  test_openapi_internals.py  test_public_api.py  test_python_tools.py  test_runtime.py  test_runtime_errors.py  test_scaffold_internals.py  test_scaffolding.py  test_schema.py  test_subprocess_modes.py  test_support_edges.py
(+87 files in other folders)
