[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcpme"
version = "0.1.0"
description = "Deterministic wrappers for exposing engineering tools as MCP servers"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "The Design Research Collective" }]
maintainers = [{ name = "Christopher C. McComb", email = "ccm@cmu.edu" }]
keywords = ["mcp", "engineering", "wrappers", "deterministic", "tooling"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = []

[project.scripts]
mcpme = "mcpme.cli:main"

[project.optional-dependencies]
dev = [
  "build>=1.2,<2",
  "mypy>=1.10,<2",
  "pre-commit>=3.7,<5",
  "pytest>=8.2,<9",
  "pytest-cov>=7.0,<8",
  "ruff>=0.6.0,<1",
  "sphinx>=7.4,<9",
  "sphinx-rtd-theme>=2.0,<4",
  "twine>=5.1,<7",
]
challenge-subset = [
  "build123d",
  "gmsh",
  "openmdao",
  "pyNastran",
]
challenge-full = [
  "aerosandbox",
  "build123d",
  "gmsh",
  "openmdao",
  "pyNastran",
  "submitit",
]

[project.urls]
Homepage = "https://github.com/cmudrc/mcpme"
Repository = "https://github.com/cmudrc/mcpme"
Issues = "https://github.com/cmudrc/mcpme/issues"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mcpme = ["py.typed"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests", "examples", "scripts"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF", "D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D"]

[tool.mypy]
packages = ["mcpme"]
python_version = "3.12"
warn_unused_configs = true
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true
